--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -56,6 +56,9 @@
     font-size: x-large;
     font-family: 'Scheherazade New', serif;
 }
+.background-recomendaciones {
+    background-color: #9d6b53;
+}
 /* recomendacion */
 .container-recomendacion {
     text-align: center;
@@ -69,7 +72,7 @@
 }
 /* recomendacion */
 .texto-recomendacion {
-    color: #fff;
+    color: black;
     font-family: 'Scheherazade New', serif;
     font-size: large;
 }
