--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -1,13 +1,25 @@
-
-
 /* fondo de pantalla del proyecto */
 .background {
     background-color: #ede0d4;
 }
+
 /* color de las letras del navbar */
 .color-nav {
     color: #ede0d4;
 }
+
+/* nav */
+.titulo-nav {
+    text-decoration: none;
+    padding: 20px;
+    color: #b5838d;
+}
+
+/* nav */
+.background-nav {
+    background: #ede0d4;
+}
+
 /* social bar */
 .social {
     position: fixed;
@@ -40,9 +52,18 @@
 .social ul li .icon-instagram {
     background: #EC7063;
 }
+
 /* /* social bar */
 .social ul li .icon-whatsapp {
     background: #2ECC71;
+}
+
+.h1-producto {
+    text-align: center;
+    font-family: 'Scheherazade New', serif;
+    font-size: xx-large;
+    color: #7f5539;
+
 }
 
 /* titulo principal del proyecto */
@@ -56,31 +77,51 @@
     font-size: x-large;
     font-family: 'Scheherazade New', serif;
 }
+
 .background-recomendaciones {
     background-color: #9d6b53;
 }
+
 /* recomendacion */
 .container-recomendacion {
     text-align: center;
     padding: 20px 20px;
     margin: 60px 60px;
 }
+
 /* recomendacion */
 .titulo-recomendacion {
     color: #a5a58d;
     font-family: 'Scheherazade New', serif;
 }
+
 /* recomendacion */
 .texto-recomendacion {
     color: black;
     font-family: 'Scheherazade New', serif;
     font-size: large;
 }
-.titulo-nav {
-    text-decoration: none;
-    padding: 20px;
-    color: #b5838d;
+
+/* clientes */
+.container-titulo {
+    display: flex;
+    justify-content: right;
+    padding: 20px 20px;
+    margin: 30px;
 }
-.background-nav {
-    background: #ede0d4;
+/* clientes */
+#titulo-cliente1 {
+    color: #7f4f24;
 }
+/* clientes */
+#titulo-cliente2 {
+    color: #936639;
+}
+/* clientes */
+.videos-container {
+    display: flex;
+    justify-content: center;
+}
+
+
+
