--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -109,14 +109,17 @@
     padding: 20px 20px;
     margin: 30px;
 }
+
 /* clientes */
 #titulo-cliente1 {
     color: #7f4f24;
 }
+
 /* clientes */
 #titulo-cliente2 {
     color: #936639;
 }
+
 /* clientes */
 .videos-container {
     display: flex;
@@ -124,4 +127,94 @@
 }
 
 
+/* productos */
+#sec1 {
+    background-image: radial-gradient(#9c6644, #7f5539);
+}
 
+#sec2 {
+    background-image: radial-gradient(#b08968, #ddb892);
+}
+
+#sec3 {
+    background-image: radial-gradient(#e6ccb2, #ede0d4);
+}
+
+/* productos */
+.fotos-producto {
+    height: 60%;
+}
+
+/* productos */
+.contenedor-producto {
+    height: 650px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px 40px;
+    align-items: center;
+}
+
+/* productos */
+.contenedor-producto a {
+    display: inline-block;
+    padding: 7px 0;
+    color: #283773;
+    text-decoration: none;
+    width: 100px;
+    text-align: center;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    background: #fff;
+}
+
+/* productos */
+.contenedor-texto h2 {
+    color: #000000;
+    font-family: 'Scheherazade New', serif;
+    font-weight: 900;
+    padding: 10px;
+}
+
+/* productos */
+.contenedor-texto p {
+    color: #414833;
+    font-family: 'Scheherazade New', serif;
+    font-weight: 800;
+}
+
+/* productos */
+@media screen and (max-width:1000px) {
+    .contenedor-producto {
+        flex-direction: column-reverse;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .fotos-producto {
+        height: 40%;
+    }
+
+    .contenedor-texto {
+        text-align: center;
+    }
+}
+
+/* productos */
+@media screen and (max-width:600px) {
+    .contenedor-producto {
+        flex-direction: column-reverse;
+        align-content: center;
+        justify-content: center;
+    }
+
+    /* productos */
+    .fotos-producto {
+        height: 25%;
+    }
+
+    /* productos */
+    .contenedor-texto {
+        text-align: center;
+    }
+
+}
