--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,8 @@
 .videos-container {
   display: flex;
   justify-content: center;
+  padding: 10px 10px;
+  background-color: #3a2e39;
 }
 
 /* productos */
