--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -124,6 +124,8 @@
 .videos-container {
     display: flex;
     justify-content: center;
+    padding: 10px 10px;
+    background-color: #3a2e39;
 }
 
 
