--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -1,62 +1,3 @@
-/* fondo de pantalla del proyecto */
-.background {
-    background-color: #ede0d4;
-}
-
-/* color de las letras del navbar */
-.color-nav {
-    color: #ede0d4;
-}
-
-/* nav */
-.titulo-nav {
-    text-decoration: none;
-    padding: 20px;
-    color: #b5838d;
-}
-
-/* nav */
-.background-nav {
-    background: #ede0d4;
-}
-
-/* social bar */
-.social {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    z-index: 100;
-}
-
-/* /* social bar */
-.social ul {
-    list-style: none;
-}
-
-/* /* social bar */
-.social ul li a {
-    display: inline-block;
-    flex-direction: row;
-    color: #fff;
-    background: #000;
-    padding: 10px 15px;
-    text-decoration: none;
-}
-
-
-/* /* social bar */
-.social ul li .icon-instagram {
-    background: #EC7063;
-}
-
-/* /* social bar */
-.social ul li .icon-whatsapp {
-    background: #2ECC71;
-}
 
 .h1-producto {
     text-align: center;
@@ -66,68 +7,11 @@
 
 }
 
-/* titulo principal del proyecto */
+/* titulo del producto */
 .titulo-principal {
     color: #ddb892;
     font-family: 'Scheherazade New', serif;
 }
-
-/* Accesorios */
-.texto-accesorios {
-    font-size: x-large;
-    font-family: 'Scheherazade New', serif;
-}
-
-.background-recomendaciones {
-    background-color: #9d6b53;
-}
-
-/* recomendacion */
-.container-recomendacion {
-    text-align: center;
-    padding: 20px 20px;
-    margin: 60px 60px;
-}
-
-/* recomendacion */
-.titulo-recomendacion {
-    color: #a5a58d;
-    font-family: 'Scheherazade New', serif;
-}
-
-/* recomendacion */
-.texto-recomendacion {
-    color: black;
-    font-family: 'Scheherazade New', serif;
-    font-size: large;
-}
-
-/* clientes */
-.container-titulo {
-    display: flex;
-    justify-content: right;
-    padding: 20px 20px;
-    margin: 30px;
-}
-
-/* clientes */
-#titulo-cliente1 {
-    color: #7f4f24;
-}
-
-/* clientes */
-#titulo-cliente2 {
-    color: #936639;
-}
-
-/* clientes */
-.videos-container {
-    display: flex;
-    justify-content: center;
-    padding: 10px 10px;
-    background-color: #3a2e39;
-}
-
 
 /* productos */
 #sec1 {
@@ -184,39 +68,3 @@
     font-weight: 800;
 }
 
-/* productos */
-@media screen and (max-width:1000px) {
-    .contenedor-producto {
-        flex-direction: column-reverse;
-        align-content: center;
-        justify-content: center;
-    }
-
-    .fotos-producto {
-        height: 40%;
-    }
-
-    .contenedor-texto {
-        text-align: center;
-    }
-}
-
-/* productos */
-@media screen and (max-width:600px) {
-    .contenedor-producto {
-        flex-direction: column-reverse;
-        align-content: center;
-        justify-content: center;
-    }
-
-    /* productos */
-    .fotos-producto {
-        height: 25%;
-    }
-
-    /* productos */
-    .contenedor-texto {
-        text-align: center;
-    }
-
-}
