--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,6 @@
 @import "componentes/productos";
+@import "componentes/clientes";
+@import "componentes/recomendacion";
+@import "componentes/accesorios";
+@import "componentes/general";
+@import "componentes/mediaQ";
