--- a/scss/componentes/recomendacion.scss
+++ b/scss/componentes/recomendacion.scss
@@ -1,6 +1,6 @@
 /* recomendacion */
 .background-recomendaciones {
-    background-color: #9d6b53;
+    background-color: #ddbea9;
 }
 
 /* recomendacion */
@@ -12,7 +12,7 @@
 
 /* recomendacion */
 .titulo-recomendacion {
-    color: #a5a58d;
+    color: #6b705c;
     font-family: 'Scheherazade New', serif;
 }
 
