--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,13 @@
 
 /* titulo del producto */
 .titulo-principal {
-  color: #ddb892;
+  color: #6b705c;
   font-family: "Scheherazade New", serif;
+  margin: 10px 10px;
+  padding: 10px 10px;
 }
 
-/* productos */
+/* productos fondos de pantalla para cada section */
 #sec1 {
   background-image: radial-gradient(#9c6644, #7f5539);
 }
@@ -38,7 +40,7 @@
   align-items: center;
 }
 
-/* productos */
+/* productos a */
 .contenedor-producto a {
   display: inline-block;
   padding: 7px 0;
@@ -51,7 +53,7 @@
   background: #fff;
 }
 
-/* productos */
+/* productos h2 */
 .contenedor-texto h2 {
   color: #000000;
   font-family: "Scheherazade New", serif;
@@ -59,7 +61,7 @@
   padding: 10px;
 }
 
-/* productos */
+/* productos p */
 .contenedor-texto p {
   color: #414833;
   font-family: "Scheherazade New", serif;
@@ -76,12 +78,12 @@
 
 /* clientes */
 #titulo-cliente1 {
-  color: #7f4f24;
+  color: #6b705c;
 }
 
 /* clientes */
 #titulo-cliente2 {
-  color: #936639;
+  color: #a5a58d;
 }
 
 /* clientes */
@@ -89,12 +91,11 @@
   display: flex;
   justify-content: center;
   padding: 10px 10px;
-  background-color: #3a2e39;
 }
 
 /* recomendacion */
 .background-recomendaciones {
-  background-color: #9d6b53;
+  background-color: #ddbea9;
 }
 
 /* recomendacion */
@@ -106,7 +107,7 @@
 
 /* recomendacion */
 .titulo-recomendacion {
-  color: #a5a58d;
+  color: #6b705c;
   font-family: "Scheherazade New", serif;
 }
 
