--- a/scss/componentes/clientes.scss
+++ b/scss/componentes/clientes.scss
@@ -8,12 +8,12 @@
 
 /* clientes */
 #titulo-cliente1 {
-    color: #7f4f24;
+    color: #6b705c;
 }
 
 /* clientes */
 #titulo-cliente2 {
-    color: #936639;
+    color: #a5a58d;
 }
 
 /* clientes */
@@ -21,5 +21,4 @@
     display: flex;
     justify-content: center;
     padding: 10px 10px;
-    background-color: #3a2e39;
 }
