--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -9,11 +9,13 @@
 
 /* titulo del producto */
 .titulo-principal {
-    color: #ddb892;
+    color: #6b705c;
     font-family: 'Scheherazade New', serif;
+    margin: 10px 10px;
+    padding: 10px 10px;
 }
 
-/* productos */
+/* productos fondos de pantalla para cada section */
 #sec1 {
     background-image: radial-gradient(#9c6644, #7f5539);
 }
@@ -40,7 +42,7 @@
     align-items: center;
 }
 
-/* productos */
+/* productos a */
 .contenedor-producto a {
     display: inline-block;
     padding: 7px 0;
@@ -53,7 +55,7 @@
     background: #fff;
 }
 
-/* productos */
+/* productos h2 */
 .contenedor-texto h2 {
     color: #000000;
     font-family: 'Scheherazade New', serif;
@@ -61,7 +63,7 @@
     padding: 10px;
 }
 
-/* productos */
+/* productos p */
 .contenedor-texto p {
     color: #414833;
     font-family: 'Scheherazade New', serif;
