--- a/scss/componentes/productos.scss
+++ b/scss/componentes/productos.scss
@@ -1,4 +1,3 @@
-
 .h1-producto {
     text-align: center;
     font-family: 'Scheherazade New', serif;
@@ -17,7 +16,7 @@
 
 /* productos fondos de pantalla para cada section */
 #sec1 {
-    background-image: radial-gradient(#9c6644, #7f5539);
+    background-image: radial-gradient(#cb997e, #7f5539);
 }
 
 #sec2 {
@@ -30,7 +29,7 @@
 
 /* productos */
 .fotos-producto {
-    height: 60%;
+    height: 40%;
 }
 
 /* productos */
@@ -69,4 +68,3 @@
     font-family: 'Scheherazade New', serif;
     font-weight: 800;
 }
-
